--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,11 @@ sklearn
 statannotations
 statsmodels
 tqdm
-signaturescoring @ git+https://github.com/lciernik/ANS_signature_scoring.git
+signaturescoring @ git+https://github.com/BoevaLab/ANS_signature_scoring.git
 pydeseq2
 rpy2
 anndata2ri
 sc_toolbox
 pyreadr
 matplotlib_venn
+gdown
